[project]
name = 'shiftings'
version = '0.4.0'
description = 'Simple shift management system'
readme = 'README.md'
requires-python = '>=3.9'
authors = [{ name = 'HaDiKo e. V. - HaDiNet', email = 'software@hadiko.de' }]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]

dependencies = [
    'Authlib==1.4.1',
    'Django==5.1.6',
    'django-auth-ldap==5.1.0',
    'django-bootstrap5==24.3',
    'django-colorfield==0.12.0',
    'django-ical==1.9.2',
    'django-phonenumber-field[phonenumberslite]==8.0.0',
    'gunicorn==23.0.0',
    'holidays==0.40',
    'icalendar==6.1.1',
    'Pillow==11.1.0',
    'psycopg2-binary==2.9.10',
    'python-dateutil==2.9.0.post0',
    'requests==2.32.3',
]

[project.optional-dependencies]
tests = [
    'django-stubs==4.2.7',
    'types-python-dateutil==2.8.19.14',
    'types-requests==2.31.0.10',
    'mypy==1.8.0',
]

docs = [
    'mkdocs==1.4.2',
    'mkdocs-material==9.0.11',
]

[project.urls]
repository = 'https://github.com/HaDiNet/shiftings'

[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools.package-data]
shiftings = ['py.typed']
