[project]
name = 'shiftings'
version = '0.4.0'
description = 'Simple shift management system'
readme = 'README.md'
requires-python = '>=3.12'
license = { text = 'MIT' }
authors = [
    { name = 'HaDiKo e. V. - HaDiNet', email = 'software@hadiko.de' },
]
keywords = [
    'shift',
    'management',
    'scheduling',
    'django',
    'calendar',
]
classifiers = [
    'Framework :: Django',
    'Framework :: Django :: 6.0',
    'Intended Audience :: End Users/Desktop',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Office/Business',
    'Typing :: Typed',
]

dependencies = [
    'Authlib==1.6.7',
    'Django==6.0.2',
    'django-auth-ldap==5.3.0',
    'django-bootstrap5==26.2',
    'django-colorfield==0.14.0',
    'django-ical==1.9.2',
    'django-phonenumber-field[phonenumberslite]==8.4.0',
    'gunicorn==25.1.0',
    'holidays==0.90',
    'icalendar==7.0.0',
    'Pillow==12.1.1',
    'psycopg2-binary==2.9.11',
    'python-dateutil==2.9.0.post0',
    'requests==2.32.5',
]

[project.optional-dependencies]
dev = [
    'pre-commit==4.5.1',
    'django-stubs==5.2.9',
    'types-python-dateutil==2.9.0.20260124',
    'types-requests==2.32.4.20260107',
    'mypy==1.19.1',
]

tests = [
    'pytest==9.0.2',
    'pytest-django==4.12.0',
    'pytest-cov==7.0.0',
]

docs = [
    'mkdocs==1.6.1',
    'mkdocs-material==9.7.1',
]

[project.urls]
Homepage = 'https://github.com/HaDiNet/shiftings'
Repository = 'https://github.com/HaDiNet/shiftings'
'Bug Tracker' = 'https://github.com/HaDiNet/shiftings/issues'
Changelog = 'https://github.com/HaDiNet/shiftings/releases'

[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools.package-data]
shiftings = ['py.typed']
